runners/calculator/qalculate_engine.h
@@ -23,8 +23,10 @@ public:
         return m_lastResult;
     }
 
+    static bool findPrefix(QString basePrefix, int *base, QString *customBase);
+
 public Q_SLOTS:
-    QString evaluate(const QString &expression, bool *isApproximate = nullptr);
+    QString evaluate(const QString &expression, bool *isApproximate = nullptr, int base = 10, const QString &customBase = "");
     void updateExchangeRates();
 
     void copyToClipboard(bool flag = true);
